# src/main/java/org/ldclrcq/dto/AddIngredientRequest.java
@@ -1,0 +1,4 @@
+package org.ldclrcq.dto;
+
+public record AddIngredientRequest(String ingredientName) {
+}
